--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#4527a0">
         <title>Minesweeper</title>
-        <link rel="manifest" href="/manifest.json">
-        <link rel="icon" sizes="192x192" href="/images/192.png">
+        <link rel="manifest" href="manifest.json">
+        <link rel="icon" sizes="192x192" href="images/192.png">
         <style>
             ::-moz-selection{
                 background-color:Transparent;
