--- a/index.html
+++ b/index.html
@@ -9,55 +9,94 @@
         <link rel="manifest" href="manifest.json">
         <link rel="icon" sizes="192x192" href="images/192.png">
         <style>
+            html {
+                height: 100%;
+            }
+
+            body {
+                background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
+
             ::-moz-selection{
-                background-color:Transparent;
+                background-color: transparent;
                 color:#000;
             }
 
             ::selection {
-                background-color:Transparent;
+                background-color: transparent;
                 color:#000;
             }
 
             h1 {
+                color: #fff;
                 font-family: sans-serif;
+                font-size: 50px;
+                font-weight: 100;
                 text-align: center;
+                margin: 0;
+                padding: 30px 0;
+            }
+
+            sup {
+                font-size: 20px;
+                color: green;
+            }
+
+            #main {
+                height: 100%;
             }
 
             #minefield {
-                border-collapse: collapse;
+                display: flex;
+                flex-direction: column;
+                flex-wrap: nowrap;
+                height: 90vw;
+                justify-content: space-around;
                 margin: 0 auto;
-                width: 90%;
+                width: 90vw;
             }
 
-            td {
-                width: 10%;
-                position: relative;
-            }
-
-            td:after {
+            .cell:after {
                 content: '';
                 display: block;
                 margin-top: 100%;
             }
 
+            .row {
+                display: flex;
+                flex-grow: 1;
+                flex-wrap: nowrap;
+                justify-content: space-around;
+            }
+
             .cell {
-                background-color: lightgray;
-                border: 1px solid #fff;
+                background-color: #eee;
+                border-radius: 5px;
+                box-shadow: 0 0 15px rgba(0, 0, 0, 0.2) inset;
                 box-sizing: border-box;
                 display: inline-block;
+                flex-grow: 1;
+                margin: 2px;
                 padding: 0;
+                position: relative;
+                width: 9%;
+            }
+
+            @keyframes fadein {
+                from { opacity: 0; }
+                to   { opacity: 1; }
             }
 
             .cell-content {
-                position: absolute;
-                font-size: 50px;
-                text-align: center;
+                font-size: 4.5vw;
                 font-family: sans-serif;
-                top:0;
-                left:0;
-                width: 100%;
-                height:100%;
+                left: 50%;
+                position: absolute;
+                top: 50%;
+                transform: translate(-50%, -50%);
             }
 
             .exploded {
@@ -65,18 +104,24 @@
             }
 
             .revealed {
-                background-color: gray;
+                background-color: #fff;
+            }
+
+            .revealed .cell-content {
+                animation: fadein 0.7s;
+                animation-fill-mode: forwards;
+                opacity: 0;
             }
 
             .flagged {
-                background-color: blue;
+                background-color: orange;
             }
         </style>
     </head>
     <body>
         <div id="main">
-            <h1>Minesweeper</h1>
-            <table id="minefield"></table>
+            <h1>mines<sup>βeta</sup></h1>
+            <div id="minefield"></div>
         </div>
         <script src="js/game.js" defer></script>
     </body>
