Add icons and reduce board size

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 display: flex;
                 flex-direction: column;
                 flex-wrap: nowrap;
-                height: 90vw;
+                height: 95vw;
                 justify-content: space-around;
                 margin: 0 auto;
-                width: 90vw;
+                width: 95vw;
             }
 
             .cell:after {
@@ -100,7 +100,10 @@
             }
 
             .exploded {
-                background-color: red;
+                background: url('data:image/svg+xml;utf8,<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 35.333 35.332" style="enable-background:new 0 0 35.333 35.332;" xml:space="preserve"> <g> <path stroke="red" fill="yellow" d="M30.278,30.036l-2.688-5.313c1.068-1.5,1.801-3.248,2.102-5.144l5.64-2.084l-5.658-1.857 c-0.317-1.89-1.069-3.63-2.153-5.119l2.517-5.465l-5.313,2.688c-1.5-1.069-3.25-1.802-5.146-2.103L17.495,0l-1.856,5.654 c-1.891,0.32-3.631,1.072-5.122,2.156L5.054,5.293l2.688,5.315c-1.069,1.5-1.801,3.248-2.101,5.144L0,17.836l5.658,1.855 c0.319,1.892,1.07,3.632,2.154,5.119l-2.516,5.465l5.315-2.688c1.5,1.069,3.249,1.803,5.144,2.104l2.083,5.641l1.857-5.658 c1.89-0.318,3.631-1.07,5.121-2.154L30.278,30.036z M9.474,17.667c0-4.518,3.675-8.193,8.191-8.193 c4.518,0,8.189,3.676,8.189,8.193c0,4.517-3.674,8.19-8.189,8.19C13.148,25.857,9.474,22.186,9.474,17.667z"/> </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>');
+                background-color: orange;
+                background-position: center center;
+                background-repeat: no-repeat;
             }
 
             .revealed {
@@ -114,7 +117,10 @@
             }
 
             .flagged {
-                background-color: orange;
+                background: url('data:image/svg+xml;utf8,<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve"> <path stroke="blue" fill="green" d="M51.421,22.593L10,3.362V1c0-0.553-0.448-1-1-1S8,0.447,8,1v3v33v3v19c0,0.553,0.448,1,1,1s1-0.447,1-1V40.681 l41.366-16.251c0.373-0.146,0.622-0.501,0.634-0.9C52.012,23.13,51.784,22.762,51.421,22.593z"/> <g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>');
+                background-color: yellow;
+                background-position: center center;
+                background-repeat: no-repeat;
             }
         </style>
     </head>
