--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#4527a0">
-        <title>Minesweeper</title>
+        <title>Mines</title>
         <link rel="manifest" href="manifest.json">
         <link rel="icon" sizes="192x192" href="images/192.png">
         <style>
