Make theme colour make sense

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#4527a0">
+        <meta name="theme-color" content="#2cb5e8">
         <title>Mines</title>
         <link rel="manifest" href="manifest.json">
         <link rel="icon" sizes="192x192" href="images/192.png">
