--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <style>
             html {
                 height: 100%;
+                -webkit-user-select: none;
+                -webkit-touch-callout: none;
+                -webkit-tap-highlight-color: rgba(0,0,0,0);
             }
 
             body {
