--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <style>
             html {
                 height: 100%;
-                -webkit-user-select: none;
+                /*-webkit-user-select: none;*/
                 -webkit-touch-callout: none;
                 -webkit-tap-highlight-color: rgba(0,0,0,0);
             }
