--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             html {
                 height: 100%;
                 /*-webkit-user-select: none;*/
-                -webkit-touch-callout: none;
-                -webkit-tap-highlight-color: rgba(0,0,0,0);
+                /*-webkit-touch-callout: none;
+                -webkit-tap-highlight-color: rgba(0,0,0,0);*/
             }
 
             body {
@@ -127,7 +127,8 @@
             }
         </style>
     </head>
-    <body>
+    <body oncontextmenu="return false" ondragstart="return false"
+onselectstart="return false">
         <div id="main">
             <h1>mines<sup>βeta</sup></h1>
             <div id="minefield"></div>
