Allow context menus outside of cells

--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
             }
         </style>
     </head>
-    <body oncontextmenu="return false" ondragstart="return false"
-onselectstart="return false">
+    <body onselectstart="return false">
         <div id="main">
             <h1>mines<sup>βeta</sup></h1>
             <div id="minefield"></div>
