--- a/index.html
+++ b/index.html
@@ -9,20 +9,6 @@
         <link rel="manifest" href="manifest.json">
         <link rel="icon" sizes="192x192" href="images/192.png">
         <style>
-            html {
-                height: 100%;
-                /*-webkit-user-select: none;*/
-                /*-webkit-touch-callout: none;
-                -webkit-tap-highlight-color: rgba(0,0,0,0);*/
-            }
-
-            body {
-                background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
-
             ::-moz-selection{
                 background-color: transparent;
                 color:#000;
@@ -31,6 +17,17 @@
             ::selection {
                 background-color: transparent;
                 color:#000;
+            }
+
+            html {
+                height: 100%;
+            }
+
+            body {
+                background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+                height: 100%;
+                margin: 0;
+                padding: 0;
             }
 
             h1 {
@@ -62,6 +59,18 @@
                 width: 95vw;
             }
 
+            #flash {
+                background-color: rgba(255, 255, 0, 0.3);
+                height: 100%;
+                left: 0;
+                opacity: 0;
+                pointer-events: none;
+                position: absolute;
+                top: 0;
+                width: 100%;
+                z-index: 1;
+            }
+
             .cell:after {
                 content: '';
                 display: block;
@@ -86,17 +95,6 @@
                 padding: 0;
                 position: relative;
                 width: 9%;
-            }
-
-            @keyframes fadein {
-                from { opacity: 0; }
-                to   { opacity: 1; }
-            }
-
-            @keyframes explode {
-                0% { box-shadow: 0 0 1px orange; }
-                15% { box-shadow: 0 0 90px orange; }
-                100%   { box-shadow: none; }
             }
 
             .cell-content {
@@ -133,10 +131,35 @@
                 background-position: center center;
                 background-repeat: no-repeat;
             }
+
+            .flashing {
+                animation: flash 0.3s;
+                animation-fill-mode: forwards;
+                opacity: 1;
+            }
+
+            @keyframes fadein {
+                from { opacity: 0; }
+                to   { opacity: 1; }
+            }
+
+            @keyframes flash {
+                0%   { opacity: 0; }
+                15%  { opacity: 1; }
+                100% { opacity: 0; }
+            }
+
+            @keyframes explode {
+                0%   { box-shadow: 0 0 1px orange; }
+                15%  { box-shadow: 0 0 90px orange; }
+                100% { box-shadow: none; }
+            }
+
         </style>
     </head>
     <body onselectstart="return false">
         <div id="main">
+            <div id="flash"></div>
             <h1>mines<sup>βeta</sup></h1>
             <div id="minefield"></div>
         </div>
