--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
             }
 
             h1 {
+                animation: fadeinslow 2s;
+                animation-fill-mode: forwards;
                 color: #fff;
                 font-family: sans-serif;
                 font-size: 50px;
                 font-weight: 100;
                 text-align: center;
                 margin: 0;
+                opacity: 0;
                 padding: 30px 0;
             }
 
@@ -78,10 +81,14 @@
             }
 
             .row {
+                animation: fadeinslow 2s;
+                animation-fill-mode: forwards;
                 display: flex;
                 flex-grow: 1;
                 flex-wrap: nowrap;
                 justify-content: space-around;
+                opacity: 0;
+
             }
 
             .cell {
@@ -141,6 +148,12 @@
             @keyframes fadein {
                 from { opacity: 0; }
                 to   { opacity: 1; }
+            }
+
+            @keyframes fadeinslow {
+                0%   { opacity: 0; }
+                20%  { opacity: 0; }
+                100% { opacity: 1; }
             }
 
             @keyframes flash {
