--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                 background-color: orange;
                 background-position: center center;
                 background-repeat: no-repeat;
-                animation: explode 1.7s;
-                animation-fill-mode: forwards;
+                //animation: explode 1.7s;
+                //animation-fill-mode: forwards;
             }
 
             .revealed {
